Fixed spacing & changed font
Have you ever heard of a space bar?

--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -2,23 +2,28 @@
 
 /*Base styling - This should be applied on all pages for cohesiveness */
 
-html{
+@font-face {
+    font-family: Poppins;
+    src: url(Fonts/Poppins-Regular.ttf) format('truetype');
+}
+
+html {
     height:100%;
     background-image: url(../Images/waterBackground.jpg);
     background-size:cover;
 }
 
-*{
+* {
     box-sizing: border-box;
 }
 
-.main{
+.main {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
 
-header{
+header {
     position: sticky;
     z-index: 1;
     top: 0;
@@ -28,32 +33,31 @@ header{
                 rgb(51, 51, 51) -15px 0px 25px;
 }
 
-
-.navigation ul li{
+.navigation ul li {
     display: inline;
 }
 
-.navigation ul li a{
+.navigation ul li a {
     display: inline-block;
     padding: 10px;
-    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
+    font-family: Poppins, Verdana, Geneva, sans-serif;    
     font-size: 25px;
     text-decoration: none;
     text-align: center;
 }
 
-.alert{
+.alert {
     margin-top: 3%;
     margin-bottom: 3%;
     padding: 10px;
     background: rgba(172, 20, 20, 0.75);
     color: white;
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Poppins, Verdana, Geneva, sans-serif;   
     font-size: 30px;
 }
 
-footer{
+footer {
     width: 100%;
     left:0;
     bottom:0;
@@ -64,8 +68,8 @@ footer{
     background-color: darkslategrey;
 }
 
-@media (width < 800px){
-    header{
+@media (width < 800px) {
+    header {
         position: unset;
         width:100%;
     }
